--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-streamlit==1.36.0
-pandas==2.2.2
-rank-bm25==0.2.2
-numpy==1.26.4
-tqdm==4.66.4
-pyarrow==15.0.2
-scikit-learn==1.5.0
+streamlit==1.29.0
+chromadb==0.4.22
+sentence-transformers==2.2.2
+google-generativeai==0.3.2
+pydantic==2.5.3
