--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-streamlit==1.29.0
-chromadb==0.4.22
-sentence-transformers==2.2.2
-google-generativeai==0.3.2
-pydantic==2.5.3
+streamlit>=1.28.0
+chromadb>=0.4.15
+sentence-transformers>=2.2.2
+google-generativeai>=0.3.0
+pydantic>=2.0.0
+numpy>=1.24.0
+pandas>=2.0.0
+requests>=2.31.0
